--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -29,6 +29,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: 56.25em) {
+        padding: 9rem 2rem;
+    }
+
 }
 
 .container {
@@ -42,6 +47,12 @@ body {
 
     .left-section {
         width: 50%;
+
+    @media only screen and (max-width: 56.25em) {
+        width: 100%;
+        text-align: center;
+    }
+
 
         &__header {
             color: white;
@@ -59,17 +70,27 @@ body {
             font-size: 1.3rem;
             font-weight: 400;
             max-width: 40rem;
+
+            @media only screen and (max-width: 56.25em) {
+                max-width: 100%;
+                line-height: 2;
+            }
         }
     }
 
     .right-section {
         margin-left: 6rem;
 
+        @media only screen and (max-width: 56.25em) {
+            margin: 4rem 0 0 0;
+        }
+
+
 
         &__button--1 {
             border: none;
             border-radius: 7px;
-            padding: 1rem 8rem;
+            padding: 2rem 5rem;
             color: white;
             font-family: inherit;
             font-weight: 600;
@@ -87,8 +108,10 @@ body {
             color: white;
             font-family: inherit;
             font-weight: 500;
-            font-size: 1.1rem;
+            font-size: 1.3rem;
             background-color:  hsl(0, 100%, 74%) ;
+            box-shadow: 0 .6rem 0rem rgba(0, 0, 0, 0.2);
+            cursor: pointer;
         }
 
         &__paragraph {
@@ -106,6 +129,8 @@ body {
             font-weight: 600;
             font-size: .8rem;
             color: hsl(246, 25%, 77%);
+            text-align: center;
+            margin-top: 2rem;
         }
 
         &__span--3 {
@@ -122,9 +147,14 @@ body {
             border: none;
             border-radius: 8px;
             box-shadow: 0 .6rem 0rem rgba(0, 0, 0, 0.2);
+            
+            &-control {
+                position: relative;
+            }
         }
 
         &__input {
+            color: hsl(0, 100%, 74%);
             padding: 1rem 1rem 1rem 2.6rem;
             font-size: 1.3rem;
             font-weight: 700;
@@ -133,6 +163,7 @@ body {
             border: none;
             border-radius: 4px;
             border: 1px solid hsl(154, 59%, 51%);
+            width: 100%;
             
             &:focus,
             &:focus-visible {
@@ -146,9 +177,49 @@ body {
 ::placeholder { 
     color:  hsl(0, 100%, 74%) ;
     font-weight: 600;
-    font-family: inherit;
-  }
+    font-family: "Poppins";
+    opacity: .7;
+}
+
+
+form.error .visible {
+    display: block;
+}
+
 
 .right-section__input:focus ::placeholder {
-    color: black;
+    color: hsl(0, 100%, 74%);
+}
+
+#firstNameError,
+#lastNameError,
+#passwordError,
+#emailError {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    opacity: 0;
+}
+
+#firstNameError.visible,
+#field-1.visible,
+#lastNameError.visible, 
+#field-2.visible,
+#emailError.visible, 
+#field-3.visible,
+#passwordError.visible, 
+#field-4.visible{
+    opacity: 1;
+}
+
+#field-1,
+#field-2,
+#field-3,
+#field-4 {
+    color: hsl(0, 100%, 74%);
+    display: flex;
+    justify-content: flex-end;
+    opacity: 0;
+    font-family: "Poppins";
+    font-style: italic;
 }
